--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,55 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.josepcode.petagram.MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".activities.MainActivity">
 
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/miActionBar"
+    <include android:id="@+id/miActionBar"
+             layout="@layout/appbar_layout">
+    </include>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        android:elevation="@dimen/elevacion_actionbar"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:theme="@style/ThemeOverlay.AppCompat.Light">
-
-        <!--El actionBar siempre le ponemos color PrimaryColor
-        en app y android theme= le damos el estilo a action bar con material design-->
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dog_foot"
-            android:layout_gravity="left"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Petagram"
-            android:textSize="@dimen/ab_tv_titulo_size"
-            android:layout_gravity="center"
-            />
-        <ImageButton
-            android:id="@+id/ib_estrella"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:layout_marginRight="@dimen/iv_id_estrella_margin_right"
-            android:src="@drawable/estrella"/>
-
-    </android.support.v7.widget.Toolbar>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_Contactos"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/miActionBar"
-        android:layout_marginTop="@dimen/rv_Contactos_margin_top"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+        android:layout_marginTop="@dimen/view_pager_margin_top"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    </android.support.v4.view.ViewPager>
+
+
+</android.support.design.widget.CoordinatorLayout>
