--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,12 +5,15 @@
     <!-- Action Bar-->
     <dimen name="elevacion_actionbar">4dp</dimen>
 
+    <!--View PAger-->
+    <dimen name="view_pager_margin_top">30dp</dimen>
+
     <!--CardView dimensions-->
     <dimen name="card_view_margin_boton">30dp</dimen>
     <dimen name="corner_radius_card_view">4dp</dimen>
     <dimen name="cv_linear_layout_padding">15dp</dimen>
     <dimen name="cv_linear_layout_padding_right">20dp</dimen>
-    <dimen name="cv_tv_like">190dp</dimen>
+    <dimen name="cv_tv_like">130dp</dimen>
     <dimen name="iv_bone_layout_marginleft">10dp</dimen>
     <dimen name="id_ll_pet_foto_pading">30dp</dimen>
 
@@ -22,4 +25,9 @@
         <dimen name="rv_Contactos_margin_top">15dp</dimen>
 
         <dimen name="rv2_layout_margin_top">60dp</dimen>
+
+    <!--Formulari0-->
+    <dimen name="email_top">70dp</dimen>
+    <dimen name="comentarios_top">124dp</dimen>
+
 </resources>
